FISH-6081: some cleanup changes